--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -35,7 +35,21 @@
       <version>42.7.3</version>
     </dependency>
 
-    <!-- Jakarta Servlet API (Tomcat 10+ использует namespace jakarta.*) -->
+    <!-- JSTL API -->
+    <dependency>
+        <groupId>jakarta.servlet.jsp.jstl</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+
+    <!-- JSTL Implementation -->
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+        <version>3.0.1</version>
+    </dependency>
+    
+    <!-- Jakarta Servlet API (Tomcat 10+ namespace jakarta.*) -->
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
