--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     	<dependency>
     	    <groupId>org.postgresql</groupId>
     	    <artifactId>postgresql</artifactId>
-    	    <scope>runtime</scope>
+    	    <scope>42.6.0</scope>
     	</dependency>
 
 	</dependencies>
