--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=demo
-##for open in routes
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+# Для статических HTML файлов
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
+
+# Или если хотите использовать шаблоны
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 ##connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/crud_de_usuario
 spring.datasource.username=postgres
