--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
     	    <scope>42.6.0</scope>
     	</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
